@@ -25,7 +25,7 @@ my $dbh = connect_database();
 if (! defined $dbh) {
 	plan skip_all => 'Connection to database failed, cannot continue testing';
 }
-plan tests => 218;
+plan tests => 220;
 
 isnt( $dbh, undef, 'Connect to database for database handle method testing');
 
@@ -1151,14 +1151,25 @@ ok( $result, 'DB handle method "lo_unlink" works');
 # Test of the "pg_notifies" database handle method
 #
 
-#   [-Perl::Critic::Policy::Bangs::ProhibitCommentedOutCode]$ret = $dbh->func('pg_notifies');
-# Returns either undef or a reference to two-element array [ $table,
-# $backend_pid ] of asynchronous notifications received.
-
 eval {
   $dbh->func('pg_notifies');
 };
 is( $@, q{}, 'DB handle method "pg_notifies" does not throw an error');
+
+$t=q{DB handle method "pg_notifies" (func) returns the correct values};
+my $notify_name = 'dbdpg_notify_test';
+my $pid = $dbh->selectall_arrayref('SELECT pg_backend_pid()')->[0][0];
+$dbh->do("LISTEN $notify_name");
+$dbh->do("NOTIFY $notify_name");
+$dbh->commit();
+my $info = $dbh->func('pg_notifies');
+is_deeply($info, [$notify_name, $pid], $t);
+
+$t=q{DB handle method "pg_notifies" returns the correct values};
+$dbh->do("NOTIFY $notify_name");
+$dbh->commit();
+my $info = $dbh->pg_notifies;;
+is_deeply($info, [$notify_name, $pid], $t);
 
 #
 # Test of the "getfd" database handle method
